--- a/arch/arm/boot/dts/nspire-classic.dtsi
+++ b/arch/arm/boot/dts/nspire-classic.dtsi
@@ -30,13 +30,18 @@
 };
 
 &timer0 {
-	compatible = "nspire-classic-timer";
+	/* compatible = "nspire-classic-timer"; */
 	reg = <0x900C0000 0x1000>, <0x900A0018 0x8>;
 };
 
 &timer1 {
 	compatible = "nspire-classic-timer";
 	reg = <0x900D0000 0x1000>, <0x900A0020 0x8>;
+};
+
+&keypad {
+	active-low;
+
 };
 
 / {
