--- a/arch/arm/boot/dts/nspire.dtsi
+++ b/arch/arm/boot/dts/nspire.dtsi
@@ -35,6 +35,29 @@
 		clock-frequency = <32768>;
 	};
 
+	base_clk: base_clk {
+		#clock-cells = <0>;
+		compatible = "nspire-clock";
+		reg = <0x900B0000 0x2>;
+	};
+
+	ahb_clk: ahb_clk {
+		#clock-cells = <0>;
+		compatible = "nspire-ahb-divider";
+		reg = <0x900B0000 0x2>;
+		clocks = <&base_clk>;
+		clock-names = "base_clk";
+	};
+
+	apb_pclk: apb_pclk {
+		#clock-cells = <0>;
+		compatible = "fixed-factor-clock";
+		clock-div = <2>;
+		clock-mult = <1>;
+		clocks = <&ahb_clk>;
+		clock-names = "ahb_clk";
+	};
+
 	ahb {
 		compatible = "simple-bus";
 		#address-cells = <1>;
