Change clk-nspire to use compatible property to determine IO type

--- a/arch/arm/boot/dts/nspire-classic.dtsi
+++ b/arch/arm/boot/dts/nspire-classic.dtsi
@@ -44,11 +44,11 @@
 };
 
 &base_clk {
-	io-type = "classic";
+	compatible = "nspire-clock-classic";
 };
 
 &ahb_clk {
-	io-type = "classic";
+	compatible = "nspire-ahb-divider-classic";
 };
 
 / {
