--- a/arch/arm/boot/dts/nspire-cx.dts
+++ b/arch/arm/boot/dts/nspire-cx.dts
@@ -36,11 +36,11 @@
 };
 
 &base_clk {
-	io-type = "cx";
+	compatible = "nspire-clock-cx";
 };
 
 &ahb_clk {
-	io-type = "cx";
+	compatible = "nspire-ahb-divider-cx";
 };
 
 &keypad {
